# RustyImageProcessor

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: rust.yml
benches/: bench_chain_operations.rs
lib/: lib.rs
lib/core/: image.rs  operations.rs  pixel.rs
lib/filters/: blur.rs  edge_detection.rs  filtering_operations.rs  gray_scale.rs  sharpen.rs
lib/transformations/: crop.rs  resize.rs  rotate.rs  transformation_operations.rs
lib/utils/: image_io.rs  statistics.rs
src/: lib.rs  main.rs
src/core/: image.rs  operations.rs  pixel.rs
src/filters/: blur.rs  edge_detection.rs  filtering_operations.rs  gamma_correction.rs  gray_scale.rs  morphological.rs  sharpen.rs
src/transformations/: crop.rs  resize.rs  rotate.rs  transformation_operations.rs
src/utils/: color_space_converter.rs  image_io.rs  statistics.rs
tests/: filter_tests.rs  image_tests.rs  transformation_tests.rs  utils_tests.rs
