[package]
name = "image_processor"
version = "0.1.0"
edition = "2021"

[dependencies]
image = "0.25.2"
rayon = "1.10.0"
tokio = { version = "1.40.0", features = ["full"] }
async-std = { version = "1", features = ["attributes", "tokio1"] }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["async_futures", "async_tokio"] }

[[bench]]
name = "bench_chain_operations"
harness = false